# Image_Processor

./: .gitignore  Cargo.toml  README.md
crates/image-processor-cli/: Cargo.toml
crates/image-processor-cli/src/: main.rs
crates/image-processor-cli/tests/: cli_tests.rs
crates/image-processor-core/: Cargo.toml
crates/image-processor-core/benches/: processing_benchmarks.rs
crates/image-processor-core/src/: config.rs  database.rs  error.rs  format_converter.rs  job_manager.rs  lib.rs  logging.rs  models.rs  processing.rs  progress.rs  queue.rs  utils.rs  watermark_engine.rs
crates/image-processor-core/src/processing/: tests.rs
crates/image-processor-core/src/watermark_engine/: tests.rs
crates/image-processor-core/tests/: integration_test.rs
crates/image-processor-gui/: Cargo.toml  index.html  package.json  tauri.conf.json
crates/image-processor-gui/src/: App.css  App.tsx  main.rs
docs/: detailed-documentation.md
