[package]
name = "image-processor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core image processing engine and business logic"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Image processing libraries
image = { workspace = true }
libvips = { version = "1.6", optional = true }

# Database for metadata and settings
sqlx = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# Configuration management
config = { workspace = true }
dirs = { workspace = true }

# Cross-platform utilities
which = { workspace = true }

# Additional dependencies
toml = { workspace = true }
num_cpus = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = ["libvips"]
libvips = ["dep:libvips"]

[[bench]]
name = "processing_benchmarks"
harness = false