[package]
name = "image-processor-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri-based GUI for image processing"
keywords.workspace = true
categories.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Core processing engine
image-processor-core = { path = "../image-processor-core" }

# Tauri framework
tauri = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Configuration
config = { workspace = true }
dirs = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.8"